# ai-banana-earlystage

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  README.md  WORKFLOW_DOCUMENTATION.md  config.py  docker-compose.yml  dvc.yaml  main.py  mlflow.db  pyproject.toml  requirements.txt
.dvc/: config
analysis/: args.yaml  predictions.json  results.csv
config/: airflow.cfg
dags/: example_hello.py  model_retraining_dag.py
database/: README.md  __init__.py  connection.py  create_database.sql  init_db.sql  model_performance.py  models.py  pgadmin_queries.sql
docker/: docker-airflow-official.yml  docker-compose.yml  docker-minio.yml  docker-mlops-pipeline.yml
docker/config/: airflow.cfg
docs/: PROJECT_GAPS_AND_DOCUMENTATION.md
migrations/: README.md
mlops/: __init__.py  mlflow_integration.py
models/: .gitkeep
notebook/: bdes-data-annotation.ipynb  bsed-datasets-merge.ipynb  bsed-training.ipynb  data-labeling-classification.ipynb
router/: database_crud.py  feedback.py  mlops.py  process.py
schemas/: __init__.py  feedback.py
scripts/: __init__.py  deploy_production_model.py  export_feedback_for_training.py  init_db.py  mlflow_hello.py  rollback_model.py  run_retrain.py  setup_database.py
services/: detection_service.py  feedback_service.py  formatting.py  image_processing.py  inference.py  storage_service.py  validation.py
storage/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
training/: __init__.py  train_with_mlflow.py
(+12 files in other folders)
